@@ -13,15 +13,22 @@
 # You should have received a copy of the GNU Lesser General Public
 # License along with this library.  If not, see
 # <http://www.gnu.org/licenses/>.
-import unittest
-import datetime
 from gtfsbrisbane.queue import Entry
+from unittest.mock import patch
+import datetime
+import unittest
 
 
 class TestEntry(unittest.TestCase):
 
+    def setUp(self):
+        self.entry = Entry('ISBN', 'ignore', '3.40pm', '12mins')
+
     def test_converts_scheduled_time_to_real_datetime(self):
-        entry = Entry('ISBN', 'ignore', '3.40pm', '12mins')
-        self.assertIsInstance(entry.scheduled, datetime.datetime)
-        self.assertEqual(15, entry.scheduled.hour)
-        self.assertEqual(40, entry.scheduled.minute)
+        self.assertIsInstance(self.entry.scheduled, datetime.datetime)
+        self.assertEqual(15, self.entry.scheduled.hour)
+        self.assertEqual(40, self.entry.scheduled.minute)
+
+    def test_padding_postpones_scheduled_time_by_padding_amount(self):
+        self.entry.padding = 7
+        self.assertEqual(33, self.entry.scheduled.minute)
